feat: execute SelfRun 3.1 in disposable conversations with hybrid routing and bounded fanout